html header ( nav)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="css/styles.css">
     <title></title>
   </head>
-
-  <body></body>
+  <body>
+    <header>
+      <img src="" alt="">
+      <input type="checkbox" id="menu-burger-checkbox" class="menu-burger-checkbox">
+      <label for="menu-burger-checkbox" class="circle">
+          <span class="line line-high"></span>
+          <span class="line line-middle"></span>
+          <span class="line line-low"></span>
+      </label>
+      <nav>
+        <ul>
+          <li><a href="#street-jam-festival ">Street Jam Festival</a></li>
+          <li><a href="#street-food ">Street Food</a></li>
+          <li><a href="#Ccntact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
