codage html main street jam festival

--- a/index.html
+++ b/index.html
@@ -10,18 +10,44 @@
     <header>
       <img src="" alt="">
       <input type="checkbox" id="menu-burger-checkbox" class="menu-burger-checkbox">
-      <label for="menu-burger-checkbox" class="circle">
+      <label for="menu-burger-checkbox" class="menu-burger circle">
           <span class="line line-high"></span>
           <span class="line line-middle"></span>
           <span class="line line-low"></span>
       </label>
       <nav>
         <ul>
-          <li><a href="#street-jam-festival ">Street Jam Festival</a></li>
+          <li class="border-high"><a href="#street-jam-festival ">Street Jam Festival</a></li>
           <li><a href="#street-food ">Street Food</a></li>
           <li><a href="#Ccntact">Contact</a></li>
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="street-jam-festival" id="street-jam-festival">
+        <img src="" alt="">
+        <p>
+          Le 15 octobre 2023, Vevey célèbre les tendances actuelles en matière 
+          d'art urbain et de musique, et rassemble une communauté de 
+          personnes partageant les mêmes intérêts.
+          Notre événement offre une variété d'activités pour les visiteurs, 
+          notamment des démonstrations de skate réalisées par des professionnels, 
+          des ateliers de graffiti interactifs, des expositions d'œuvres d'art urbain 
+          innovantes et des performances musicales
+          <input type="checkbox" id="afficher-plus-checkbox">
+          <span class="more-content">
+            d'artistes locaux et internationaux.
+            Notre objectif est de créer un espace pour que les artistes de rue et 
+            les amateurs de culture urbaine puissent se rencontrer, 
+            partager leur savoir-faire et leur passion pour l'art urbain et 
+            s'immerger dans une ambiance urbaine unique.
+            Notre festival propose également une sélection de stands de 
+            restauration proposant une cuisine de rue authentique pour 
+            ravir les papilles des visiteurs.
+          </span>
+        </p>
+        <label for="afficher-plus-checkbox">afficher plus</label>
+      </div>
+    </main>
   </body>
 </html>
