codage css tags graffiti street art et titre skate

--- a/index.html
+++ b/index.html
@@ -48,6 +48,26 @@
         </p>
         <label for="afficher-plus-checkbox">afficher plus</label>
       </div>
+      <div class="tags-graffiti-street-art">
+        <h2><span>Tags</span><span>Graffiti</span><span>Street Art</span></h2>
+        <ul>
+          <li class="border-high">
+            <p class="hours">09h00-11h00 :</p>
+            <p>Sessions libres </p>
+          </li>
+          <li>
+            <p class="hours">10h00-12h00 :</p>
+            <p>Atelier de graffiti interactif avec XXX</p>
+          </li>
+          <li>
+            <p class="hours">13h30–17h00 :</p>
+            <p>Démonstration de Manos68 et sessions libres</p>
+          </li>
+        </ul>
+      </div>
+      <div class="skate">
+        <h2>Skate</h2>
+      </div>
     </main>
   </body>
 </html>
