codage html 2 tags graffiti street art

--- a/index.html
+++ b/index.html
@@ -64,6 +64,42 @@
             <p>Démonstration de Manos68 et sessions libres</p>
           </li>
         </ul>
+        <div class="container-carousel">
+          <div class="carousel">
+            <img src="img/geneve-lune.jpg" alt="">
+            <img src="img/portrait-650-1.jpg" alt="">
+            <img src="img/posters-australie-paysage-a-l-39-aube-du-format-carre.jpg.jpg" alt="">
+          </div>
+        </div>
+        <p>
+          Nous sommes ravis de présenter notre invité d'honneur pour 
+          le Street Jam Festival, le/la célèbre graffeur/graffeuse XXX.
+          Originaire de YYY, XXX a commencé à expérimenter avec 
+          les bombes aérosols à l'âge de 14 ans et a depuis créé une réputation
+          internationale pour son style unique et expressif. 
+          Son travail est influencé par la culture hip-hop, 
+          la street culture et l'art urbain contemporain,
+          et est souvent caractérisé/e par des couleurs vives, 
+          des formes organiques et des détails saisissants.
+          <input 
+            type="checkbox" 
+            id="afficher-plus-checkbox2" 
+            class="more-checkbox-tags">
+          <span class="more-content more-content-tags">
+          XXX est une figure emblématique de la scène graffiti, 
+          et son travail a été présenté dans des expositions du monde entier.
+          En plus de son travail de graffeur, il/elle est également un mentor 
+          pour la jeune génération d'artistes urbains, organisant des ateliers 
+          et partageant son expérience avec la communauté.
+          Nous sommes honorés d'accueillir XXX en tant qu'invité/e 
+          d'honneur de notre festival urbain annuel, 
+          et nous sommes impatients de voir son talent en action 
+          lors de notre atelier de graffiti interactif. 
+          Les participants auront l'occasion d'apprendre directement de lui/elle,
+          de découvrir son processus créatif et de s'inspirer de son travail unique.
+          </span>
+        </p>
+        <label for="afficher-plus-checkbox2">Afficher plus</label>
       </div>
       <div class="skate">
         <h2>Skate</h2>
