codage html main skate

--- a/index.html
+++ b/index.html
@@ -103,6 +103,72 @@
       </div>
       <div class="skate">
         <h2>Skate</h2>
+        <ul class="hourly">
+          <li class="border-high">
+            <p class="hours">09h00-10h00 :</p>
+            <p>Inscriptions et accueil des participants</p>
+          </li>
+          <li>
+            <p class="hours">10h00-10h30 :</p>
+            <p>Démo de skateboard par des professionnels</p>
+          </li>
+          <li>
+            <p class="hours">10h30-11h30 :</p>
+            <p>Atelier d'initiation au skateboard pour les débutants </p>
+          </li>
+          <input 
+            type="checkbox" 
+            id="afficher-plus-checkbox3" 
+            class="more-checkbox-skate">
+          <span class="more-content more-content-skate">
+            <li>
+              <p class="hours">09h00-10h00 :</p>
+              <p>Inscriptions et accueil des participants</p>
+            </li>
+            <li>
+              <p class="hours">10h00-10h30 :</p>
+              <p>Démo de skateboard par des professionnels</p>
+            </li>
+            <li>
+              <p class="hours">10h30-11h30 :</p>
+              <p>Atelier d'initiation au skateboard pour les débutants</p>
+            </li>
+            <li>
+              <p class="hours">11h30-12h30 :</p>
+              <p>Session de skateboard libre pour les participants</p>
+            </li>
+            <li>
+              <p class="hours">12h30-13h30 :</p>
+              <p>Pause</p>
+            </li>
+            <li>
+              <p class="hours">13h30-14h00 :</p>
+              <p>Concours de skateboard "Meilleure figure" pour les participants</p>
+            </li>
+            <li>
+              <p class="hours">14h00-15h00 :</p>
+              <p>Session de skateboard libre pour les participants</p>
+            </li>
+            <li>
+              <p class="hours">15h00-15h30 :</p>
+              <p>Démo de skateboard par des professionnels</p>
+            </li>
+
+            <li>
+              <p class="hours">15h30-16h30 :</p>
+              <p>Atelier de skateboard "Street Style" pour les skateurs expérimentés</p>
+            </li>
+            <li>
+              <p class="hours">16h30-17h00 :</p>
+              <p>Remise des prix pour le concours "Meilleure figure" </p>
+            </li>
+            <li>
+              <p class="hours">17h00 :</p>
+              <p>Fin de la journée</p>
+            </li>
+          </span>
+          <label for="afficher-plus-checkbox3">Afficher plus</label>
+        </ul>
       </div>
     </main>
   </body>
