codage html rectification

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
           notamment des démonstrations de skate réalisées par des professionnels, 
           des ateliers de graffiti interactifs, des expositions d'œuvres d'art urbain 
           innovantes et des performances musicales
-          <input type="checkbox" id="afficher-plus-checkbox">
-          <span class="more-content">
+          <input 
+            type="checkbox" 
+            id="afficher-plus-checkbox1" 
+            class="more-checkbox-street-jam-festival">
+          <span class="more-content more-content-street-jam-festival">
             d'artistes locaux et internationaux.
             Notre objectif est de créer un espace pour que les artistes de rue et 
             les amateurs de culture urbaine puissent se rencontrer, 
@@ -46,11 +49,11 @@
             ravir les papilles des visiteurs.
           </span>
         </p>
-        <label for="afficher-plus-checkbox">afficher plus</label>
+        <label for="afficher-plus-checkbox1">Afficher plus</label>
       </div>
       <div class="tags-graffiti-street-art">
         <h2><span>Tags</span><span>Graffiti</span><span>Street Art</span></h2>
-        <ul>
+        <ul class="hourly">
           <li class="border-high">
             <p class="hours">09h00-11h00 :</p>
             <p>Sessions libres </p>
