codage html tags street art graffiti

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             ravir les papilles des visiteurs.
           </span>
         </p>
-        <label for="afficher-plus-checkbox1">Afficher plus</label>
+        <label for="afficher-plus-checkbox1" class="btn-more">Afficher plus</label>
       </div>
-      <div class="tags-graffiti-street-art">
+      <div class="tags-graffiti-street-art" id="tags-graffiti-street-art">
         <h2><span>Tags</span><span>Graffiti</span><span>Street Art</span></h2>
         <ul class="hourly">
           <li class="border-high">
@@ -102,9 +102,9 @@
           de découvrir son processus créatif et de s'inspirer de son travail unique.
           </span>
         </p>
-        <label for="afficher-plus-checkbox2">Afficher plus</label>
+        <label for="afficher-plus-checkbox2" class="btn-more">Afficher plus</label>
       </div>
-      <div class="skate">
+      <div class="skate" id="skate">
         <h2>Skate</h2>
         <ul class="hourly">
           <li class="border-high">
@@ -170,7 +170,9 @@
               <p>Fin de la journée</p>
             </li>
           </span>
-          <label for="afficher-plus-checkbox3">Afficher plus</label>
+          <label for="afficher-plus-checkbox3" class="btn-more">Afficher plus</label>
+        </ul>
+      </div>
         </ul>
       </div>
     </main>
