codage html musique

--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
           <label for="afficher-plus-checkbox3" class="btn-more">Afficher plus</label>
         </ul>
       </div>
+      <div class="musique" id="musique">
+        <h2>Musique</h2>
+        <div class="container-carousel">
+          <div class="carousel">
+            <img src="img/geneve-lune.jpg" alt="">
+            <img src="img/portrait-650-1.jpg" alt="">
+            <img src="img/posters-australie-paysage-a-l-39-aube-du-format-carre.jpg.jpg" alt="">
+          </div>
+        </div>
+        <ul class="hourly">
+          <li class="border-high">
+            <p class="hours">15h00-17h00 :</p>
+            <p>Atelier de musique urbaine pour les amateurs de beatmaking et de rap</p>
+          </li>
+          <li>
+            <p class="hours">17h00-23h00 :</p>
+            <p>Concert de hip-hop avec des artistes locaux et nationaux</p>
+          </li>
+          <li>
+            <p class="hours">24h00 :</p>
+            <p>Fin de la journée</p>
+          </li>
+        </ul>
+      </div>
         </ul>
       </div>
     </main>
