codage html street food

--- a/index.html
+++ b/index.html
@@ -197,6 +197,109 @@
           </li>
         </ul>
       </div>
+      <div class="street-food" id="street-food">
+        <h2>Street-food</h2>
+        <ul>
+          <li>
+            <input 
+              type="checkbox" 
+              id="sous-menu1-checkbox" 
+              class="sub-menu-checkbox-oh-my-b">
+              <label for="sous-menu1-checkbox">
+                <p>Oh my b !</p>
+              </label>
+              <div class="arrow arrow-oh-my-b" id="arrow"></div>
+              <div class="sub-menu sub-menu-oh-my-b">
+                <p>
+                  un camion de restauration rapide proposant des burgers 
+                  artisanaux avec des ingrédients frais et locaux.
+                </p>
+              </div>
+          </li>
+          <li>
+            <input 
+              type="checkbox" 
+              id="sous-menu2-checkbox" 
+              class="sub-menu-checkbox-con-cilantro-wey">
+              <label for="sous-menu2-checkbox">
+                <p>Con cilantro wey</p>
+              </label>
+              <div class="arrow arrow-con-cilantro-wey" id="arrow"></div>
+              <div class="sub-menu sub-menu-con-cilantro-wey">
+                <p>
+                  un stand proposant des tacos et des burritos à 
+                  la viande grillée ou végétarienne, accompagnés de guacamole, 
+                  de salsa et de sauces épicées.
+                </p>
+              </div>
+          </li>
+          <li>
+            <input 
+              type="checkbox" 
+              id="sous-menu3-checkbox" 
+              class="sub-menu-checkbox-frankie-hot-dogs">
+              <label for="sous-menu1-checkbox">
+                <p>Frankie's Hot Dogs</p>
+              </label>
+              <div class="arrow arrow-frankie-hot-dogs" id="arrow"></div>
+              <div class="sub-menu sub-menu-frankie-hot-dogs">
+                <p>
+                  un stand proposant des hot-dogs traditionnels, 
+                  avec une variété de garnitures et des frites fraîches
+                  et croustillantes.
+                </p>
+              </div>
+          </li>
+          <li>
+            <input 
+              type="checkbox" 
+              id="sous-menu4-checkbox" 
+              class="sub-menu-checkbox-poke-paradise">
+              <label for="sous-menu1-checkbox">
+                <p>Poke Paradise</p>
+              </label>
+              <div class="arrow arrow-poke-paradise" id="arrow"></div>
+              <div class="sub-menu sub-menu-poke-paradise">
+                <p>
+                  un stand proposant des bols de poke hawaïen, avec du poisson frais,
+                  du riz, des légumes, des fruits et des sauces savoureuses.
+                </p>
+              </div>
+          </li>
+          <li>
+            <input 
+              type="checkbox" 
+              id="sous-menu5-checkbox" 
+              class="sub-menu-checkbox-bretagne-ambulante">
+              <label for="sous-menu1-checkbox">
+                <p>La Bretagne ambulante</p>
+              </label>
+              <div class="arrow arrow-bretagne-ambulante" id="arrow"></div>
+              <div class="sub-menu sub-menu-bretagne-ambulante">
+                <p>
+                  un stand proposant des crêpes et des gaufres sucrées ou salées, 
+                  avec une variété de garnitures comme des fruits frais, 
+                  du Nutella, du fromage, des œufs et des légumes.
+                </p>
+              </div>
+          </li>
+          <li>
+            <input 
+              type="checkbox" 
+              id="sous-menu6-checkbox" 
+              class="sub-menu-checkbox-smoothies-stop">
+              <label for="sous-menu1-checkbox">
+                <p>Smoothies Stop</p>
+              </label>
+              <div class="arrow arrow-smoothies-stop" id="arrow"></div>
+              <div class="sub-menu sub-menu-smoothies-stop">
+                <p>
+                  un stand proposant des smoothies et des jus de fruits frais,
+                  avec des mélanges de saveurs originales et saines pour une pause 
+                  rafraîchissante.
+                </p>
+              </div>
+          </li>
         </ul>
       </div>
     </main>
