codage html carousel text

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
               <p class="hours">17h00 :</p>
               <p>Fin de la journée</p>
             </li>
+            <p class="announcement">
+              Veuillez noter que les horaires sont donnés à titre indicatif et 
+              peuvent être sujets à des changements. 
+              Les participants seront informés des horaires définitifs
+              lors de leur inscription à l'événement.
+            </p>
           </span>
           <label for="afficher-plus-checkbox3" class="btn-more">Afficher plus</label>
         </ul>
@@ -238,7 +244,7 @@
               type="checkbox" 
               id="sous-menu3-checkbox" 
               class="sub-menu-checkbox-frankie-hot-dogs">
-              <label for="sous-menu1-checkbox">
+              <label for="sous-menu3-checkbox">
                 <p>Frankie's Hot Dogs</p>
               </label>
               <div class="arrow arrow-frankie-hot-dogs" id="arrow"></div>
@@ -255,7 +261,7 @@
               type="checkbox" 
               id="sous-menu4-checkbox" 
               class="sub-menu-checkbox-poke-paradise">
-              <label for="sous-menu1-checkbox">
+              <label for="sous-menu4-checkbox">
                 <p>Poke Paradise</p>
               </label>
               <div class="arrow arrow-poke-paradise" id="arrow"></div>
@@ -271,7 +277,7 @@
               type="checkbox" 
               id="sous-menu5-checkbox" 
               class="sub-menu-checkbox-bretagne-ambulante">
-              <label for="sous-menu1-checkbox">
+              <label for="sous-menu5-checkbox">
                 <p>La Bretagne ambulante</p>
               </label>
               <div class="arrow arrow-bretagne-ambulante" id="arrow"></div>
@@ -288,7 +294,7 @@
               type="checkbox" 
               id="sous-menu6-checkbox" 
               class="sub-menu-checkbox-smoothies-stop">
-              <label for="sous-menu1-checkbox">
+              <label for="sous-menu6-checkbox">
                 <p>Smoothies Stop</p>
               </label>
               <div class="arrow arrow-smoothies-stop" id="arrow"></div>
@@ -301,6 +307,12 @@
               </div>
           </li>
         </ul>
+      </div>
+      <div class="container-carousel-text">
+        <div class="carousel-text">
+          <img src="img/logo.svg" alt="">
+          <img src="img/logo.svg" alt="">
+        </div>
       </div>
     </main>
   </body>
