codage html footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li class="border-high"><a href="#street-jam-festival ">Street Jam Festival</a></li>
           <li><a href="#street-food ">Street Food</a></li>
-          <li><a href="#Ccntact">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -315,5 +315,20 @@
         </div>
       </div>
     </main>
+    <footer>
+      <img src="" alt="">
+      <div class="adress">
+        <h3>Adresse</h3>
+        <p>
+          Street Jam Festival <br>
+          Place du Marché 2 <br>
+          1800 Vevey <br>
+        </p>
+      </div>
+      <div class="contact" id="contact">
+        <h3>Contact</h3>
+        <a href="mailto:info@streetjamfestival.ch">info@streetjamfestival.ch</a>
+      </div>
+    </footer>
   </body>
 </html>
