correction indentation html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </label>
       <nav>
         <ul>
-          <li class="border-high"><a href="#street-jam-festival ">Street Jam Festival</a></li>
+          <li class="border-high"><a href="#street-jam-festival">Street Jam Festival</a></li>
           <li><a href="#street-food ">Street Food</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -52,10 +52,14 @@
             ravir les papilles des visiteurs.
           </span>
         </p>
-        <label for="afficher-plus-checkbox1" class="btn-more">Afficher plus</label>
+        <label for="afficher-plus-checkbox1" class="btn-more btn-more-street-jam-festival">Afficher plus</label>
       </div>
       <div class="tags-graffiti-street-art" id="tags-graffiti-street-art">
-        <h2><span>Tags</span><span>Graffiti</span><span>Street Art</span></h2>
+        <h2>
+          <span class="titel-left">Tags</span>
+          <span class="titel-middle">Graffiti</span>
+          <span class="titel-right">Street Art</span>
+        </h2>
         <ul class="hourly">
           <li class="border-high">
             <p class="hours">09h00-11h00 :</p>
@@ -105,7 +109,7 @@
           de découvrir son processus créatif et de s'inspirer de son travail unique.
           </span>
         </p>
-        <label for="afficher-plus-checkbox2" class="btn-more">Afficher plus</label>
+        <label for="afficher-plus-checkbox2" class="btn-more btn-more-tags">Afficher plus</label>
       </div>
       <div class="skate" id="skate">
         <h2>Skate</h2>
@@ -179,7 +183,7 @@
               lors de leur inscription à l'événement.
             </p>
           </span>
-          <label for="afficher-plus-checkbox3" class="btn-more">Afficher plus</label>
+          <label for="afficher-plus-checkbox3" class="btn-more btn-more-skate">Afficher plus</label>
         </ul>
       </div>
       <div class="musique" id="musique">
@@ -332,6 +336,9 @@
         <h3>Contact</h3>
         <a href="mailto:info@streetjamfestival.ch">info@streetjamfestival.ch</a>
       </div>
+      <p class="credit">
+        2023 StreetJamFestival
+      </p>
     </footer>
   </body>
 </html>
