insertion image partie 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   </head>
   <body>
     <header>
-      <img src="" alt="">
+      <a href="#">
+        <h1>
+          <img src="" alt="">
+        </h1>
+      </a>
       <input type="checkbox" id="menu-burger-checkbox" class="menu-burger-checkbox">
       <label for="menu-burger-checkbox" class="menu-burger circle">
           <span class="line line-high"></span>
@@ -28,7 +32,7 @@
     </header>
     <main>
       <div class="street-jam-festival" id="street-jam-festival">
-        <img src="" alt="">
+        <img src="img/graffiti-street-jam-festival.jpg" alt="Photo du graffiti pour le Street Jam Festival.">
         <p>
           Le 15 octobre 2023, Vevey célèbre les tendances actuelles en matière 
           d'art urbain et de musique, et rassemble une communauté de 
@@ -76,7 +80,9 @@
         </ul>
         <div class="container-carousel">
           <div class="carousel">
-            <img src="img/geneve-lune.jpg" alt="">
+            <img 
+              src="img/graffiti-escalier.jpg" 
+              alt="Photo d'un imeuble avec des graffitis.">
             <img src="img/portrait-650-1.jpg" alt="">
             <img src="img/posters-australie-paysage-a-l-39-aube-du-format-carre.jpg.jpg" alt="">
           </div>
@@ -190,8 +196,8 @@
         <h2>Musique</h2>
         <div class="container-carousel">
           <div class="carousel">
-            <img src="img/geneve-lune.jpg" alt="">
-            <img src="img/portrait-650-1.jpg" alt="">
+            <img src="img/scene-rap-front.jpg" alt="">
+            <img src="img/scene-rap-back.jpg" alt="">
             <img src="img/posters-australie-paysage-a-l-39-aube-du-format-carre.jpg.jpg" alt="">
           </div>
         </div>
