html insertion des images et changement texte pour l'invité

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100..900&family=Montserrat:wght@400..600&display=swap" rel="stylesheet">
-    <title></title>
+    <title>Street Jam Festival</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.svg">
   </head>
   <body>
     <header>
-      <a href="#">
-        <h1>
-          <img src="" alt="">
-        </h1>
+      <a href="index.html">
+        <img src="img/logo-street-jam-festival.svg" alt="Street Jam Festival">
       </a>
       <input type="checkbox" id="menu-burger-checkbox" class="menu-burger-checkbox">
       <label for="menu-burger-checkbox" class="menu-burger circle">
@@ -32,7 +31,9 @@
     </header>
     <main>
       <div class="street-jam-festival" id="street-jam-festival">
-        <img src="img/graffiti-street-jam-festival.jpg" alt="Photo du graffiti pour le Street Jam Festival.">
+        <img 
+          src="img/graffiti-street-jam-festival.jpg" 
+          alt="Photo du graffiti pour le Street Jam Festival.">
         <p>
           Le 15 octobre 2023, Vevey célèbre les tendances actuelles en matière 
           d'art urbain et de musique, et rassemble une communauté de 
@@ -81,37 +82,41 @@
         <div class="container-carousel">
           <div class="carousel">
             <img 
+              src="img/portrait-dimitri.jpg"
+              alt="Photo d'un immeuble avec des graffitis.">
+            <img 
+              src="img/graffiti-immeuble.jpg"
+              alt="Photo d'une usine avec des graffitis.">
+            <img 
               src="img/graffiti-escalier.jpg" 
-              alt="Photo d'un imeuble avec des graffitis.">
-            <img src="img/portrait-650-1.jpg" alt="">
-            <img src="img/posters-australie-paysage-a-l-39-aube-du-format-carre.jpg.jpg" alt="">
+              alt="">
           </div>
         </div>
         <p>
           Nous sommes ravis de présenter notre invité d'honneur pour 
-          le Street Jam Festival, le/la célèbre graffeur/graffeuse XXX.
-          Originaire de YYY, XXX a commencé à expérimenter avec 
+          le Street Jam Festival, le célèbre graffeur Dimitri.
+          Originaire de Corbière, Dimitri a commencé à expérimenter avec 
           les bombes aérosols à l'âge de 14 ans et a depuis créé une réputation
           internationale pour son style unique et expressif. 
           Son travail est influencé par la culture hip-hop, 
           la street culture et l'art urbain contemporain,
-          et est souvent caractérisé/e par des couleurs vives, 
+          et est souvent caractérisé par des couleurs vives, 
           des formes organiques et des détails saisissants.
           <input 
             type="checkbox" 
             id="afficher-plus-checkbox2" 
             class="more-checkbox-tags">
           <span class="more-content more-content-tags">
-          XXX est une figure emblématique de la scène graffiti, 
+          Dimitri est une figure emblématique de la scène graffiti, 
           et son travail a été présenté dans des expositions du monde entier.
-          En plus de son travail de graffeur, il/elle est également un mentor 
+          En plus de son travail de graffeur, il est également un mentor 
           pour la jeune génération d'artistes urbains, organisant des ateliers 
           et partageant son expérience avec la communauté.
-          Nous sommes honorés d'accueillir XXX en tant qu'invité/e 
+          Nous sommes honorés d'accueillir Dimitri en tant qu'invité/e 
           d'honneur de notre festival urbain annuel, 
           et nous sommes impatients de voir son talent en action 
           lors de notre atelier de graffiti interactif. 
-          Les participants auront l'occasion d'apprendre directement de lui/elle,
+          Les participants auront l'occasion d'apprendre directement de lui,
           de découvrir son processus créatif et de s'inspirer de son travail unique.
           </span>
         </p>
@@ -196,9 +201,15 @@
         <h2>Musique</h2>
         <div class="container-carousel">
           <div class="carousel">
-            <img src="img/scene-rap-front.jpg" alt="">
-            <img src="img/scene-rap-back.jpg" alt="">
-            <img src="img/posters-australie-paysage-a-l-39-aube-du-format-carre.jpg.jpg" alt="">
+            <img 
+              src="img/scene-rap-front.jpg" 
+              alt="Photo de la scène du festival vu de devant.">
+            <img 
+              src="img/scene-rap-back.jpg" 
+              alt="Photo de la scène du festival vu de derrière.">
+            <img 
+              src="img/beatmaker.jpg" 
+              alt="Photo de deux beatmaker en train d'exercer.">
           </div>
         </div>
         <ul class="hourly">
@@ -323,13 +334,15 @@
       </div>
       <div class="container-carousel-text">
         <div class="carousel-text">
-          <img src="img/logo.svg" alt="">
-          <img src="img/logo.svg" alt="">
+          <img src="img/street-jam-festival-carousel.svg" alt="Street Jam Festival">
+          <img src="img/street-jam-festival-carousel.svg" alt="Street Jam Festival">
         </div>
       </div>
     </main>
     <footer>
-      <img src="" alt="">
+      <a href="index.html" class="logo-street-jam-festival-light">
+        <img src="img/logo-street-jam-festival-light.svg" alt="Street Jam Festival">
+      </a>
       <div class="adress">
         <h3>Adresse</h3>
         <p>
