--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </li>
           <li>
             <p class="hours">10h00-12h00 :</p>
-            <p>Atelier de graffiti interactif avec XXX</p>
+            <p>Atelier de graffiti interactif avec Dimitri</p>
           </li>
           <li>
             <p class="hours">13h30–17h00 :</p>
@@ -112,7 +112,7 @@
           En plus de son travail de graffeur, il est également un mentor 
           pour la jeune génération d'artistes urbains, organisant des ateliers 
           et partageant son expérience avec la communauté.
-          Nous sommes honorés d'accueillir Dimitri en tant qu'invité/e 
+          Nous sommes honorés d'accueillir Dimitri en tant qu'invité
           d'honneur de notre festival urbain annuel, 
           et nous sommes impatients de voir son talent en action 
           lors de notre atelier de graffiti interactif. 
